# hackerrank

./: .clang-format  .gitignore  abstractclass.ods  exceptionserver.inout.txt  exceptionserver.out.txt  forloop.answer.txt  main.AttributeParser.cpp  main.Maps-STL.cpp  main.cpp.AttributeParser  main.cpp.ConditionalStatements  main.cpp.LowerBound-STL  main.cpp.Sets-STL  main.cpp.abstractclass  main.cpp.array  main.cpp.basicdatatype  main.cpp.boxit  main.cpp.classobject  main.cpp.exceptionalserver  main.cpp.forloop1  main.cpp.forloop2  main.cpp.function  main.cpp.inherited  main.cpp.person-professor-students  main.cpp.pointer  main.cpp.rectangleArea  main.cpp.string  main.cpp.stringstream  main.cpp.struct  main.cpp.vararray  main.cpp.vectorerase  main.cpp.vectorsort  main.cpp.virtualfunction  readme.md  sampleinput.txt
abstract/: CMakeLists.txt  main.cpp
